@@ -232,7 +232,7 @@
                ],
                "ja3stringCnt" : 1,
                "ja4" : [
-                  "t10d230100_6a57a6f57151_e3b0c44298fc"
+                  "t10d230100_6a57a6f57151_000000000000"
                ],
                "ja4Cnt" : 1,
                "version" : [
