@@ -308,7 +308,7 @@
                ],
                "ja3stringCnt" : 1,
                "ja4" : [
-                  "ts3i460000_234845559c90_e3b0c44298fc"
+                  "ts3i460000_234845559c90_000000000000"
                ],
                "ja4Cnt" : 1,
                "version" : [
