@@ -151,7 +151,7 @@
                ],
                "ja3stringCnt" : 1,
                "ja4" : [
-                  "ts3i230000_6a57a6f57151_e3b0c44298fc"
+                  "ts3i230000_6a57a6f57151_000000000000"
                ],
                "ja4Cnt" : 1,
                "version" : [
